--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
     </nav>  
     <div class="main-body">
         <h1>Welcome to my page</h1>
-        <img src="/Users/RetroMokaPunk/Coursework/block09/images/3.jpg" alt="">
         <p>Learning to code, passionate about developing as a person</p>
         <h2>"Some inspiring quote" - by some author</h2>
     </div>
@@ -34,5 +33,6 @@
             </div>
         </div>
     </footer>
+    <link rel="stylesheet" href="javascript.js">
 </body>
 </html>
