--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Contact Information</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 </head>
@@ -18,11 +18,10 @@
                 <a href="/contact.html"><li class="link-buttons">Contact</li></a>
             </ul>
         </div>
-    </nav>  
-    <div class="main-body">
-        <h1>Welcome to my page</h1>
-        <p>Learning to code, passionate about developing as a person</p>
-        <h2>"Some inspiring quote" - by some author</h2>
+    </nav>
+    <div class="main-body" >
+        <h1>Email: rita.amazon01@gmail.com</h1>
+        <h1>Cell: 012 345 6789</h1>
     </div>
     <footer>
         <div class="footer-content">
@@ -35,6 +34,6 @@
             </div>
         </div>
     </footer>
-    <link rel="stylesheet" href="javascript.js">
+
 </body>
 </html>
