--- a/portfolio.html
+++ b/portfolio.html
@@ -15,6 +15,7 @@
                 <a href="/index.html"><li class="link-buttons">Home</li></a>
                 <a href="/about.html"><li class="link-buttons">About</li></a>
                 <a href="/portfolio.html"><li class="link-buttons">Portfolio</li></a>
+                <a href="/contact.html"><li class="link-buttons">Contact</li></a>
             </ul>
         </div>
     </nav>
