--- a/about.html
+++ b/about.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 </head>
 <body>
     <nav class="nav-bar">
@@ -14,6 +15,7 @@
                 <a href="/index.html"><li class="link-buttons">Home</li></a>
                 <a href="/about.html"><li class="link-buttons">About</li></a>
                 <a href="/portfolio.html"><li class="link-buttons">Portfolio</li></a>
+                <a href="/contact.html"><li class="link-buttons">Contact</li></a>
             </ul>
         </div>
     </nav>
@@ -32,10 +34,10 @@
         <div class="footer-content">
             <p>&copy; 2023 My Website</p>
             <div class="social-icons">
-              <a href="#" target="_blank"><i class="fab fa-facebook-f"></i></a>
-              <a href="#" target="_blank"><i class="fab fa-twitter"></i></a>
-              <a href="#" target="_blank"><i class="fab fa-instagram"></i></a>
-              <a href="#" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+                <a href="#" target="_blank"><i class="fab fa-facebook-f"></i></a>
+                <a href="#" target="_blank"><i class="fab fa-twitter"></i></a>
+                <a href="#" target="_blank"><i class="fab fa-instagram"></i></a>
+                <a href="#" target="_blank"><i class="fab fa-linkedin-in"></i></a>
             </div>
         </div>
     </footer>
